Sat Jun  1 08:00:46 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/zlib/zlib.c (gzfile_read, gzfile_read_all, gzfile_getc),
	  (gzreader_gets): check EOF.  [ruby-core:55220] [Bug #8467]

Sat Jun  1 08:00:06 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/zlib/zlib.c (gzfile_read, gzfile_read_all, gzfile_getc),
	  (gzreader_gets): check EOF.  [ruby-core:55220] [Bug #8467]

Sat Jun  1 07:32:15 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c: Use BDIGIT type for hbase.

Sat Jun  1 02:37:35 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/socket/option.c (sockopt_s_byte): constructor of the sockopt
	  whose value's is byte.

	* ext/socket/option.c (sockopt_byte): getter for above.

	* ext/socket/option.c (inspect_byte): inspect for above.

	* ext/socket/option.c (sockopt_s_ip_multicast_loop): constructor of
	  the sockopt whose optname is IP_MULTICAST_LOOP.

	* ext/socket/option.c (sockopt_ip_multicast_loop): getter for above.

	* ext/socket/option.c (sockopt_s_ip_multicast_ttl): constructor of
	  the sockopt whose optname is IP_MULTICAST_TTL.

	* ext/socket/option.c (sockopt_ip_multicast_ttl): getter for above.

	* ext/socket/option.c (sockopt_inspect): use above.

Sat Jun 01 01:50:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_power): use rb_dbl2big
	  to convert a double value to a Bignum.

Sat Jun  1 00:19:50 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (calc_hbase): Make hbase the maximum power of base
	  representable in BDIGIT.

Fri May 31 23:56:13 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (calc_hbase): Extracted from rb_big2str0.

Fri May 31 23:22:24 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c: Don't hard code SIZEOF_BDIGITS for log_base(hbase).
	  (big2str_orig): hbase_numdigits argument added.
	  (big2str_karatsuba): Ditto.
	  (rb_big2str0): Calculate hbase_numdigits.

Fri May 31 17:57:21 2013  Zachary Scott  <zachary@zacharyscott.net>

	* process.c: Improve Process::exec documentation
