@@ -1,3 +1,8 @@
+Sat Jun  1 10:13:17 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* string.c (rb_str_new[2-5], rb_{tainted,usascii}_str_new2),
+	  (rb_str_buf_new2): remove old interfaces.
+
 Sat Jun  1 08:00:46 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/zlib/zlib.c (gzfile_read, gzfile_read_all, gzfile_getc),
